--- a/Info-App/Podfile
+++ b/Info-App/Podfile
@@ -8,6 +8,7 @@ target 'Info-App' do
   # Pods for Info-App
   pod 'ObjectMapper', '3.3.0'
   pod 'SDWebImage', :modular_headers => true
+  pod 'SnapKit', '~> 4.0.0'
 
   target 'Info-AppTests' do
     inherit! :search_paths
