--- a/Info-App/Podfile
+++ b/Info-App/Podfile
@@ -9,6 +9,7 @@ target 'Info-App' do
   pod 'ObjectMapper', '3.3.0'
   pod 'SDWebImage', :modular_headers => true
   pod 'SnapKit', '~> 4.0.0'
+  pod 'HexColors'
 
   target 'Info-AppTests' do
     inherit! :search_paths
