--- a/Info-App/Podfile
+++ b/Info-App/Podfile
@@ -10,6 +10,8 @@ target 'Info-App' do
   pod 'SDWebImage', :modular_headers => true
   pod 'SnapKit', '~> 4.0.0'
   pod 'HexColors'
+  pod 'EasyLoadingShimmer'
+  pod 'Toast-Swift'
 
   target 'Info-AppTests' do
     inherit! :search_paths
